refactor(backend/admin-gin): swag go 泛型响应类型完善
