# backend/admin-gin/internal/pkg/http/response.go
@@ -1,21 +1,21 @@
 package http
 
 type HttpResponse[T any] struct {
-	/* 业务状态码 */
-	Code Code `json:"code" example:"200"`
-	/* 响应描述 */
-	Message string `json:"message" example:"操作成功"`
-	/* 响应数据(可以为空) */
+	// code: HTTP 状态码（与 net/http 保持一致）
+	Code int `json:"code" example:"200"`
+	// message: 响应描述（默认可用 internal/pkg/http.StatusText(code)）
+	Message string `json:"message" example:"成功"`
+	// data: 响应数据（可以为空）
 	Data T `json:"data,omitempty"`
 }
 
 type HttpPageResponse[T any] struct {
-	/* 嵌入 HttpResponse 使用泛型切片 */
+	// 嵌入 HttpResponse 使用泛型切片
 	HttpResponse[[]T]
-	/* 页码 */
+	// page: 当前页码
 	Page int `json:"page" example:"1"`
-	/* 页数 */
+	// size: 每页数量
 	Size int `json:"size" example:"10"`
-	/* 总条数 */
+	// total: 总条数
 	Total int64 `json:"total" example:"50"`
 }
